# ChangeLog for net-im/psi
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/psi/ChangeLog,v 1.42 2004/12/27 11:47:01 humpback Exp $

*psi-0.9.2-r1 (27 Dec 2004)

  27 Dec 2004; Gustavo Felisberto <humpback@gentoo.org>; +psi-0.9.2-r1.ebuild:
  Adding some extras to use CXXFLAGS and proper doc instalation.

  07 Aug 2004; Tom Martin <slarti@gentoo.org> psi-0.9.2.ebuild:
  Stable on amd64.

  18 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> psi-0.9.2.ebuild:
  Added amd64 keyword, closing #57381.

  05 Jul 2004; Lars Weiler <pylon@gentoo.org> psi-0.9.2.ebuild:
  Stable on ppc.

  30 Jun 2004; Guy Martin <gmsoft@gentoo.org> psi-0.9.2.ebuild:
  Marked stable on hppa.

  21 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>; psi-0.9.1.ebuild,
  psi-0.9.2.ebuild:
  Small QA and added 0.9.2 stable on x86

  12 Jun 2004; Lars Weiler <pylon@gentoo.org> psi-0.9.2.ebuild:
  Added ~ppc to keywords again.

*psi-0.9.2 (10 Jun 2004)

  10 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>; psi-0.9-r1.ebuild,
  psi-0.9.2.ebuild, psi-0.9.2_rc2.ebuild, psi-0.9.ebuild:
  Removing older versions and updating to the latest 0.9.2

  24 May 2004; Gustavo Felisberto <humpback@gentoo.org>; :
  Adding version 0.9.2_rc2 wich is hardmasked

  27 Apr 2004; Guy Martin <gmsoft@gentoo.org> psi-0.9.1.ebuild:
  Marked stable on hppa.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> psi-0.9-r1.ebuild:
  Add inherit eutils

  25 Apr 2004; Guy Martin <gmsoft@gentoo.org> psi-0.9-r1.ebuild:
  Marked stable on hppa.

  28 Mar 2004; Jason Wever <weeve@gentoo.org> psi-0.9.1.ebuild:
  Added ~sparc keyword.

  28 Feb 2004; Gustavo Felisberto <humpback@gentoo.org>; psi-0.9.1.ebuild:
  stable on x86. Added metadata.xml

  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> psi-0.9.1.ebuild:
  added amd64 keyword.  removed ~alpha because of bad dependencies.

  07 Feb 2004; Lars Weiler <pylon@gentoo.org> psi-0.9-r1.ebuild:
  stable on ppc
