@@ -3,7 +3,9 @@ MD5 9b91ead14acbf0da98d3b33e75c67e79 metadata.xml 306
 MD5 e9fb10ce0fe04859a0bc4b565c097555 psi-0.9.1.ebuild 818
 MD5 5af9a0050493634ebbe10112188e716b psi-0.9.2-r1.ebuild 1138
 MD5 ccc0fcb1a164e58fb56cfd999612ff5d psi-0.9.2.ebuild 827
+MD5 8843c79904d7e0a49f08a02f0740d959 psi-0.9.3_rc1.ebuild 1373
 MD5 d27222ab1b988a3cb4364e0a66b7ff2a files/digest-psi-0.9.1 62
 MD5 dab2c4d26326cec55a905a1a38351d51 files/digest-psi-0.9.2 63
 MD5 dab2c4d26326cec55a905a1a38351d51 files/digest-psi-0.9.2-r1 63
+MD5 1a24e5395a720c18fe8c7eb370d16a0f files/digest-psi-0.9.3_rc1 69
 MD5 c43f1bfd60e72f69346f0a67288c62e8 files/psi_gpg_fix 1193
